# scifi-demux

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODOs  environment.yml  pyproject.toml
.github/workflows/: ci.yml  test.yml
example_configs/: PlateDesign_SampleExample1.txt  design.yaml  genome_map_design.tsv
qc/: multiqc_scifi.yaml
src/scifi_demux/: cli.py  config.py  demux.py  demux_core.py  demux_core_cli.py  io_utils.py  logging_utils.py  renaming.py  slurm.py
src/scifi_demux/__data__/: 96well_Tn5_bc_layout.txt  tn5_bcs.txt
src/scifi_demux/cli/: main.py
src/scifi_demux/exec/: hpc.py  local.py
src/scifi_demux/qc/: collectors.py
src/scifi_demux/steps/: primitives.py  step1.py  step2.py
src/scifi_demux/strategies/: __init__.py  sample_design.py  wells_by_plate.py
src/scifi_demux/utils/: fs.py  logging.py  state.py
test/: test_cli_smoke.py  test_config.py  test_demux_core.py
