[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "scifi-demux"
version = "0.1.0"
description = "Wraps renaming and demultiplexing scripts for scifi‑ATAC FASTQ workflows"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6",
  "rich>=13",
  "tqdm>=4",
]

[project.scripts]
scifi-demux = "scifi_demux.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scifi_demux"]

[tool.hatch.build]
include = [
  "src/scifi_demux/__data/**",
]
