[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "scifi-demux"
version = "0.1.0"
description = "Wraps renaming and demultiplexing scripts for scifi‑ATAC FASTQ workflows"
readme = "README.md"
authors = [{ name = "Fabio Gomez", email = "gomezcan@umich.edu" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6",
  "rich>=13",
  "tqdm>=4",
]

[project.scripts]
scifi-demux = "scifi_demux.cli.main:app"
scifi-demux = "scifi_demux.cli:app"
scifi-demux-demux-core = "scifi_demux.demux_core_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scifi_demux"]

[tool.hatch.build]
include = [
  "src/scifi_demux/__data__/96well_Tn5_bc_layout.txt",
  "src/scifi_demux/__data__/__init__.py",
]

