[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "scifi-demux"
version = "0.1.1"  # <-- bump so pip doesn't reuse a cached wheel
description = "Wraps renaming and demultiplexing scripts for scifi-ATAC FASTQ workflows"
readme = "README.md"
authors = [{ name = "Fabio Gomez", email = "gomezcan@umich.edu" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6",
  "rich>=13",
  "tqdm>=4",
]

[project.scripts]
scifi-demux = "scifi_demux.cli:app"

# wheel target (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/scifi_demux"]
include = [
  "src/scifi_demux/__data__/**",  # ship all data files in the wheel
]

# sdist target (source distribution)
[tool.hatch.build.targets.sdist]
include = [
  "src/scifi_demux/**",
  "README.md",
  "LICENSE",
]
